--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,7 @@
 {
   "tabWidth": 2,
   "useTabs": false,
-  "singleQuote": true,
+  "singleQuote": false,
   "plugins": [
     "prettier-plugin-tailwindcss"
   ]
