--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "tsparticles-slim": "^2.10.1"
   },
   "devDependencies": {
+    "@headlessui/react": "^1.7.15",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
